[tool.poetry]
name = "rpi-gpoi-fork"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"
readme = "README.md"
packages = [{include = "RPi"}]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
